# MZC_Opsional

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/base/card/: Card.cpp  Card.hpp  Valuable.cpp  Valuable.hpp
src/base/deck/: GameDeck.cpp  GameDeck.hpp  InventoryHolder.cpp  InventoryHolder.hpp  PlayerDeck.cpp  PlayerDeck.hpp  TableDeck.cpp  TableDeck.hpp
src/base/exception/: DeckException.hpp
src/base/player/: Player.cpp  Player.hpp
src/candy/: candy.cpp  candy.hpp
src/candy/abilities/: AbilityCard.cpp  AbilityCard.hpp  AbilityStatus.cpp  AbilityStatus.hpp  Abilityless.cpp  Abilityless.hpp  Quadruple.cpp  Quadruple.hpp  Quarter.cpp  Quarter.hpp  Reroll.cpp  Reroll.hpp  Reverse.cpp  Reverse.hpp  SwapCard.cpp  SwapCard.hpp  Switch.cpp  Switch.hpp
src/candy/card/: CardCandy.cpp  CardCandy.hpp
src/candy/combo/: Comboable.cpp  Comboable.hpp  Flush.cpp  Flush.hpp  FourOfAKind.cpp  FourOfAKind.hpp  FullHouse.cpp  FullHouse.hpp  HighCard.cpp  HighCard.hpp  Pair.cpp  Pair.hpp  Straight.cpp  Straight.hpp  StraightFlush.cpp  StraightFlush.hpp  ThreeOfAKind.cpp  ThreeOfAKind.hpp  TwoPair.cpp  TwoPair.hpp
src/candy/deck/: GameDeckCandy.cpp  GameDeckCandy.hpp  PlayerDeckCandy.cpp  PlayerDeckCandy.hpp  TableDeckCandy.cpp  TableDeckCandy.hpp
src/candy/exception/: AbilitiesException.hpp  DeckCandyException.hpp  GameDeckCandyException.hpp
src/candy/game-engine/: AbilitiesManager.cpp  AbilitiesManager.hpp  DeckManager.cpp  DeckManager.hpp  GameEngine.cpp  GameEngine.hpp  PointManager.cpp  PointManager.hpp  RoundManager.cpp  RoundManager.hpp
src/candy/player/: PlayerCandy.cpp  PlayerCandy.hpp
src/cangkul/: cangkul.cpp  cangkul.hpp
src/cangkul/card/: CardCangkul.cpp  CardCangkul.hpp
src/cangkul/deck/: GameDeckCangkul.cpp  GameDeckCangkul.hpp  PlayerDeckCangkul.cpp  PlayerDeckCangkul.hpp  TableDeckCangkul.cpp  TableDeckCangkul.hpp
src/cangkul/game-engine/: CangkulDeckManager.cpp  CangkulDeckManager.hpp  CangkulGameEngine.cpp  CangkulGameEngine.hpp
src/cangkul/player/: PlayerCangkul.cpp  PlayerCangkul.hpp
src/casino/: casino.hpp
src/utils/: debug.hpp  interface.cpp  interface.hpp  max.cpp  max.hpp  reader.cpp  reader.hpp  string.cpp  string.hpp
tests/: duplicateDeck.txt  incompleteDeck.txt  invalidDeckNumber.txt  invalidDeckType.txt
